--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: OpenJR
 description: I hope my knowledge is helpful to many people.
 theme: just-the-docs
-
-url: https://JongRok-Lee.github.io/OpenJR
+baseurl: "/OpenJR"
+url: https://JongRok-Lee.github.io/
