--- a/_config.yml
+++ b/_config.yml
@@ -29,3 +29,6 @@ search:
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
   button: false
+
+# For copy button on code
+enable_copy_code_button: true
