--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,6 @@ search:
 
 # For copy button on code
 enable_copy_code_button: true
+
+# Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
+color_scheme: "dark"
