--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,9 @@ title: OpenJR
 description: I hope my knowledge is helpful to many people.
 theme: just-the-docs
 url: https://JongRok-Lee.github.io/
-locale: "ko-KR"
 
 # Enable or disable the site search
-search_enabled: true
+search_enabled: false
 search:
   # Split pages into sections that can be searched individually
   # Supports 1 - 6, default: 2
@@ -35,6 +34,9 @@ enable_copy_code_button: true
 
 # Color scheme currently only supports "dark", "light"/nil (default), or a custom scheme that you define
 color_scheme: "dark"
+
+# Enable or disable heading anchors
+heading_anchors: false
 
 callouts_level: quiet # or loud
 callouts:
