Undo theme name

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: OpenJR
 description: I hope my knowledge is helpful to many people.
+theme: just-the-docs
 url: https://JongRok-Lee.github.io/
 
 # Enable or disable the site search
